Refactor Table component into fragments

--- a/notebooks/Wholesale Hedge Trades.ipynb
+++ b/notebooks/Wholesale Hedge Trades.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "artistic-pollution",
+   "execution_count": null,
+   "id": "oriented-birmingham",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "indonesian-defense",
+   "execution_count": null,
+   "id": "changed-fever",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "related-somalia",
+   "id": "bottom-depth",
    "metadata": {},
    "source": [
     "# PAGE 1"
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "breathing-equivalent",
+   "execution_count": null,
+   "id": "biological-wales",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supreme-certificate",
+   "id": "textile-quest",
    "metadata": {},
    "source": [
     "## SECTION 1"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "earlier-parking",
+   "id": "periodic-hazard",
    "metadata": {},
    "source": [
     "### CARD 1"
@@ -76,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "seventh-element",
+   "execution_count": null,
+   "id": "working-nirvana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cardiovascular-marshall",
+   "id": "saved-entertainment",
    "metadata": {},
    "source": [
     "### CARD 2"
@@ -97,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "modified-guidance",
+   "execution_count": null,
+   "id": "middle-journey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,8 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "animal-connecticut",
+   "execution_count": null,
+   "id": "cubic-basket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "floppy-sailing",
+   "execution_count": null,
+   "id": "approximate-washer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spoken-environment",
+   "id": "modified-involvement",
    "metadata": {},
    "source": [
     "# DASH"
@@ -204,8 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "eastern-portrait",
+   "execution_count": null,
+   "id": "choice-obligation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "yellow-caution",
+   "id": "departmental-relief",
    "metadata": {},
    "source": [
     "## LAYOUT"
@@ -226,8 +226,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "veterinary-newfoundland",
+   "execution_count": null,
+   "id": "turkish-standing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
     ")\n",
     "table = mdc.Table(\n",
     "    id='table',\n",
-    "    columns=[{\"field\": c, \"width\": 200} for c in all_df.columns],\n",
+    "    columns=[{\"field\": c.replace(\"_\", \" \").capitalize(), \"width\": 200} for c in all_df.columns],\n",
     "    rows=all_df.to_dict(orient='records'),\n",
     ")\n",
     "\n",
@@ -255,8 +255,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "printable-breach",
+   "execution_count": null,
+   "id": "illegal-publication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "prescription-publication",
+   "execution_count": null,
+   "id": "satisfied-leader",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demographic-camping",
+   "id": "furnished-exclusion",
    "metadata": {},
    "source": [
     "## APP"
@@ -302,18 +302,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "severe-bridge",
+   "execution_count": null,
+   "id": "southwest-piano",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dash app running on http://0.0.0.0:8001/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from jupyter_dash import JupyterDash\n",
     "from dash.dependencies import Input, Output\n",
@@ -349,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "western-tulsa",
+   "id": "waiting-chuck",
    "metadata": {},
    "outputs": [],
    "source": []
