Consolidate all locally managed components under layout

--- a/notebooks/test_sidebar.ipynb
+++ b/notebooks/test_sidebar.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "younger-learning",
+   "id": "designing-access",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "continent-oklahoma",
+   "id": "closing-rugby",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "postal-metallic",
+   "id": "married-mounting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,13 +76,13 @@
     "        return \"Other content...\"\n",
     "    return \"Another content...\"\n",
     "\n",
-    "app.run_server(mode='external', host=\"0.0.0.0\", port=8001, debug=False)"
+    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aggregate-facing",
+   "id": "terminal-shuttle",
    "metadata": {},
    "outputs": [],
    "source": []
