--- a/notebooks/test_tab.ipynb
+++ b/notebooks/test_tab.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "disciplinary-aluminum",
+   "id": "proprietary-michael",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "julian-wheat",
+   "id": "short-emergency",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,11 +49,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fossil-external",
+   "id": "north-press",
    "metadata": {},
    "outputs": [],
    "source": [
-    "app = jupyter_dash.JupyterDash(__name__)\n",
+    "app = JupyterDash(__name__)\n",
     "app.layout = layout\n",
     "\n",
     "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001)"
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "statutory-piano",
+   "id": "sudden-venture",
    "metadata": {},
    "outputs": [],
    "source": []
