First attempt to reproduce the optimization dash

--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "finnish-recycling",
+   "id": "cheap-concept",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,15 +16,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abandoned-pregnancy",
+   "id": "public-snowboard",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test toggle\n",
+    "\n",
+    "toggle = mdc.Toggle(\n",
+    "    id=\"toggle\",\n",
+    "    options=[{'label': '1'}, {'label': '2'}],\n",
+    "    selected='1',\n",
+    ")\n",
     "text = mdc.Typography(\n",
     "    id=\"text\",\n",
     "    text=\"Content...\",\n",
     "    component=\"p\",\n",
     "    variant=\"body2\",\n",
+    ")\n",
+    "\n",
+    "box = mdc.Box(children=[toggle, text])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "reverse-involvement",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test dropdown\n",
+    "\n",
+    "dropdown = mdc.Dropdown(\n",
+    "    id=\"dropdown\",\n",
+    "    labelText=\"test\",\n",
+    "    helperText=\"test\",\n",
+    "    options=[{'label': 'test1'}, {'label': 'test2'}],\n",
     ")\n",
     "text_2 = mdc.Typography(\n",
     "    id=\"text-2\",\n",
@@ -33,22 +59,23 @@
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
+    "box_2 = mdc.Box(children=[dropdown, text_2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "average-charm",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tab = mdc.Tab(\n",
-    "    children=[text, text_2],\n",
-    "    tabs=[{\"label\": \"1a\"}, {\"label\": \"1b\"}]\n",
+    "    children=[box, box_2],\n",
+    "    tabs=[{\"label\": \"toggle\"}, {\"label\": \"dropdown\"}]\n",
     ")\n",
-    "\n",
-    "toggle = mdc.Toggle(\n",
-    "    id=\"toggle\",\n",
-    "    options=[{'label': '1'}, {'label': '2'}],\n",
-    "    selected='1',\n",
-    ")\n",
-    "\n",
-    "box = mdc.Box(children=[toggle, tab])\n",
-    "\n",
     "section = mdc.Section(\n",
     "    orientation=\"columns\",\n",
-    "    children=box,\n",
+    "    children=tab,\n",
     "    cards=[{\"title\": \"Card 1\"}]\n",
     ")\n",
     "\n",
@@ -61,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "conditional-seattle",
+   "id": "fatal-ontario",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,21 +97,33 @@
     "\n",
     "\n",
     "@app.callback(\n",
-    "    Output(component_id='text-2', component_property='text'),\n",
+    "    Output(component_id='text', component_property='text'),\n",
     "    Input(component_id='toggle', component_property='selected'),\n",
     ")\n",
-    "def update_tabs(value):\n",
+    "def update_toggle(value):\n",
     "    if value == '1':\n",
     "        return \"Other content...\"\n",
     "    return \"Another content...\"\n",
     "\n",
-    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001)"
+    "\n",
+    "@app.callback(\n",
+    "    Output(component_id='text-2', component_property='text'),\n",
+    "    Input(component_id='dropdown', component_property='selected'),\n",
+    ")\n",
+    "def update_dropdown(value):\n",
+    "    if value:\n",
+    "        if 1 in value:\n",
+    "            return \"Other content...\"\n",
+    "    return \"Another content...\"\n",
+    "\n",
+    "\n",
+    "app.run_server(mode='external', host=\"0.0.0.0\", port=8001)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adolescent-legislature",
+   "id": "soviet-parker",
    "metadata": {},
    "outputs": [],
    "source": []
