Enforce design pattern for input and display components

--- a/notebooks/packages/Wholesale Hedge Trades.ipynb
+++ b/notebooks/packages/Wholesale Hedge Trades.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proved-pulse",
+   "id": "marked-terrain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "positive-commerce",
+   "id": "geographic-kingston",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "equal-behalf",
+   "id": "lesser-tunnel",
    "metadata": {},
    "source": [
     "# PAGE 1"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "material-stamp",
+   "id": "joint-study",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forced-collective",
+   "id": "royal-quarter",
    "metadata": {},
    "source": [
     "## SECTION 1"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "weekly-catch",
+   "id": "consistent-storage",
    "metadata": {},
    "source": [
     "### CARD 1"
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "inclusive-legislation",
+   "id": "single-technician",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "foster-virtue",
+   "id": "acoustic-conjunction",
    "metadata": {},
    "source": [
     "### CARD 2"
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stretch-designation",
+   "id": "circular-comedy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "practical-compiler",
+   "id": "anticipated-tyler",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ceramic-request",
+   "id": "incredible-conjunction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "operational-chinese",
+   "id": "earlier-dayton",
    "metadata": {},
    "source": [
     "# DASH"
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "charming-boxing",
+   "id": "dress-origin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "theoretical-rouge",
+   "id": "compact-extension",
    "metadata": {},
    "source": [
     "## LAYOUT"
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aggressive-coating",
+   "id": "ongoing-currency",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,13 +238,12 @@
     "    style={\"height\": \"100%\", \"width\": \"100%\"},\n",
     ")\n",
     "table = mdc.Table(\n",
-    "    id='table',\n",
+    "    id=\"table\",\n",
     "    columns=[{\"field\": c.replace(\"_\", \" \").capitalize(), \"width\": 200} for c in all_df.columns],\n",
     "    rows=all_df.to_dict(orient='records'),\n",
     ")\n",
     "\n",
     "tab = mdc.Tab(\n",
-    "    id=\"tab\",\n",
     "    children=[table, graph],\n",
     "    tabs=[\n",
     "        {\"label\": \"Trade blotter\"},\n",
@@ -256,18 +255,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fitting-springfield",
+   "id": "useful-jewelry",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Visualize based on toggles\n",
     "toggle = mdc.Toggle(\n",
     "    id=\"toggle\",\n",
-    "    options=[\n",
-    "        {'label': 'All'},\n",
-    "        {'label': 'Last'},\n",
-    "    ],\n",
-    "    selected='all',\n",
+    "    options=['All', 'Last'],\n",
     ")\n",
     "\n",
     "box = mdc.Box(children=[toggle, tab])"
@@ -276,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "protected-contrary",
+   "id": "sufficient-import",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "backed-percentage",
+   "id": "small-difference",
    "metadata": {},
    "source": [
     "## APP"
@@ -303,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ready-arrangement",
+   "id": "opening-kenya",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +316,7 @@
     "    Input(component_id='toggle', component_property='selected'),\n",
     ")\n",
     "def update_tabs(value):\n",
-    "    if value == 'all':\n",
+    "    if value == 0:\n",
     "        rows = all_df.to_dict('records')\n",
     "        fig.data[2].visible=False\n",
     "        fig.data[3].visible=False\n",
@@ -341,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baking-isolation",
+   "id": "literary-albany",
    "metadata": {},
    "outputs": [],
    "source": []
