--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cheap-concept",
+   "id": "improving-baking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "public-snowboard",
+   "id": "statistical-builder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,9 @@
     "\n",
     "toggle = mdc.Toggle(\n",
     "    id=\"toggle\",\n",
-    "    options=[{'label': '1'}, {'label': '2'}],\n",
-    "    selected='1',\n",
+    "    options=[1, 2],\n",
+    "    orientation=\"vertical\",\n",
+    "    selected=1,\n",
     ")\n",
     "text = mdc.Typography(\n",
     "    id=\"text\",\n",
@@ -40,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reverse-involvement",
+   "id": "imported-travel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
     "    id=\"dropdown\",\n",
     "    labelText=\"test\",\n",
     "    helperText=\"test\",\n",
-    "    options=[{'label': 'test1'}, {'label': 'test2'}],\n",
+    "    options=[\"test 1\", \"test 2\"],\n",
     ")\n",
     "text_2 = mdc.Typography(\n",
     "    id=\"text-2\",\n",
@@ -65,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "average-charm",
+   "id": "final-guitar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fatal-ontario",
+   "id": "foster-association",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +102,7 @@
     "    Input(component_id='toggle', component_property='selected'),\n",
     ")\n",
     "def update_toggle(value):\n",
-    "    if value == '1':\n",
+    "    if value == 0:\n",
     "        return \"Other content...\"\n",
     "    return \"Another content...\"\n",
     "\n",
@@ -111,9 +112,10 @@
     "    Input(component_id='dropdown', component_property='selected'),\n",
     ")\n",
     "def update_dropdown(value):\n",
-    "    if value:\n",
-    "        if 1 in value:\n",
-    "            return \"Other content...\"\n",
+    "    if not value:\n",
+    "        return \"No content...\"\n",
+    "    if 1 in value:\n",
+    "        return \"Other content...\"\n",
     "    return \"Another content...\"\n",
     "\n",
     "\n",
@@ -123,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "soviet-parker",
+   "id": "american-encoding",
    "metadata": {},
    "outputs": [],
    "source": []
